--- a/01-basics/03-MarkedList/index.html
+++ b/01-basics/03-MarkedList/index.html
@@ -8,19 +8,22 @@
       .marked {
         color: #efc14e;
       }
+      
     </style>
   </head>
   <body>
     <div id="app" style="margin-top: 2rem">
       <div class="container">
         <div class="form-group">
-          <input type="search" />
+          <input 
+            type="search" placeholder="Поиск по email"
+            :value="filter.search"
+            v-on:input="filter.search = $event.target.value;"
+          />
         </div>
         <ul>
-          <li>Email</li>
-          <li class="marked">Email</li>
-          <li>...</li>
-          <li>Email</li>
+          <li v-for="email in emails" v-bind:class="{marked: !isActive}">{{ email }}</li>   
+          <li v-for="email in emails" v-bind:class="{marked: isActive}">{{ email }}</li> <!--:class="marked:isActive"-->
         </ul>
       </div>
     </div>
